--- a/ansible-ipi-install/roles/scale-worker/tasks/10_bmc_secrets.yml
+++ b/ansible-ipi-install/roles/scale-worker/tasks/10_bmc_secrets.yml
@@ -1,11 +1,11 @@
 - name: Create BMC secret definition file for new worker
   copy:
-    dest: "{{ scaling_dir }}/worker-{{ ansible_loop.index0 + scale_worker_index | int }}-secret.yaml"
+    dest: "{{ scaling_dir }}/{{ item.host_name }}-secret.yaml"
     content: |
       apiVersion: v1
       kind: Secret
       metadata:
-        name: "worker-{{ ansible_loop.index0 + scale_worker_index | int }}-bmc-secret"
+        name: "{{ item.host_name }}-bmc-secret"
         namespace: openshift-machine-api
       type: Opaque      
       data:
@@ -19,7 +19,7 @@
   environment:
     KUBECONFIG: "{{ kubeconfig_file }}"
   shell: |
-    oc apply -f {{ scaling_dir }}/worker-{{ ansible_loop.index0 + scale_worker_index | int }}-secret.yaml
+    oc apply -f {{ scaling_dir }}/{{ item.host_name }}-secret.yaml
   loop: "{{ scale_worker_node.nodes }}"
   loop_control:
     extended: yes
