rescue badfish tasks

--- a/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
+++ b/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
@@ -183,21 +183,14 @@
         - "{{ dell_nodes }}"
       register: wait_for_idrac
       until: wait_for_idrac is succeeded
-      retries: 20
+      retries: 10
       delay: 30
+      ignore_errors: true
 
-    - name: Set nodes to director boot order (Dell)
-      shell:
-        chdir: "{{ badfish_tempdir.path }}"
-        cmd: |
-          source {{ badfish_venv }}/bin/activate
-          {{ badfish_cmd }}{{ item }} -t director
+    - include_tasks: 20_set_director_mode.yml
       with_items:
         - "{{ dell_nodes }}"
-      register: boot_order
-      until: boot_order is succeeded
-      retries: 3
-      delay: 60
+
   when: dell_nodes | length > 0
   tags:
     - bootorder
